chore: Update actions to use v10 branch
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -2,9 +2,9 @@ name: Check build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ v10 ]
   pull_request:
-    branches: [ master ]
+    branches: [ v10 ]
 
 jobs:
   build:
