--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,9 +2,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ next, master ]
+    branches: [ next, master, v10 ]
   pull_request:
-    branches: [ next, master ]
+    branches: [ next, master, v10 ]
 
 jobs:
   analyze:
