--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,7 @@
     "url": "git@github.com:carbon-design-system/carbon-components-angular.git"
   },
   "scripts": {
-    "postinstall": "carbon-telemetry collect --install"
+    "postinstall": "ibmtelemetry --config=telemetry.yml"
   },
   "license": "Apache-2.0",
   "author": "IBM",
@@ -18,9 +18,9 @@
   "dependencies": {
     "@carbon/icon-helpers": "10.37.0",
     "@carbon/icons": "11.14.0",
-    "@carbon/telemetry": "0.1.0",
     "@carbon/utils-position": "1.1.4",
     "@floating-ui/dom": "1.6.3",
+    "@ibm/telemetry-js": "^1.5.0",
     "flatpickr": "4.6.13",
     "tslib": "2.3.0"
   }
