--- a/package.json
+++ b/package.json
@@ -66,25 +66,23 @@
   "author": "IBM",
   "peerDependencies": {
     "@carbon/styles": "^1.56.0",
-    "rxjs": "^6.0.0 || ^7.0.0",
-    "zone.js": "^0.11.0"
+    "rxjs": "^7.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.11",
-    "@angular-devkit/core": "15.2.11",
-    "@angular/animations": "15.2.10",
-    "@angular/cli": "15.2.11",
-    "@angular/common": "15.2.10",
-    "@angular/compiler": "15.2.10",
-    "@angular/compiler-cli": "15.2.10",
-    "@angular/core": "15.2.10",
-    "@angular/forms": "15.2.10",
-    "@angular/platform-browser": "15.2.10",
-    "@angular/platform-browser-dynamic": "15.2.10",
-    "@angular/router": "15.2.10",
+    "@angular-devkit/build-angular": "16.2.16",
+    "@angular-devkit/core": "16.2.16",
+    "@angular/animations": "16.2.12",
+    "@angular/cli": "16.2.16",
+    "@angular/common": "16.2.12",
+    "@angular/compiler": "16.2.12",
+    "@angular/compiler-cli": "16.2.12",
+    "@angular/core": "16.2.12",
+    "@angular/forms": "16.2.12",
+    "@angular/platform-browser": "16.2.12",
+    "@angular/platform-browser-dynamic": "16.2.12",
+    "@angular/router": "16.2.12",
     "@babel/core": "7.9.6",
     "@carbon/styles": "1.67.0",
-    "@carbon/themes": "11.24.0",
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
     "@compodoc/compodoc": "1.1.25",
@@ -119,7 +117,7 @@
     "karma-coverage-istanbul-reporter": "3.0.2",
     "karma-jasmine": "4.0.0",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "15.2.2",
+    "ng-packagr": "16.2.3",
     "postcss": "8.4.14",
     "postcss-loader": "7.0.0",
     "react": "18.2.0",
@@ -133,7 +131,7 @@
     "tslint": "6.1.3",
     "typescript": "4.9.5",
     "whatwg-fetch": "3.0.0",
-    "zone.js": "0.11.4"
+    "zone.js": "0.13.3"
   },
   "dependencies": {
     "@carbon/icon-helpers": "10.37.0",
