--- a/package.json
+++ b/package.json
@@ -65,8 +65,11 @@
   "license": "Apache-2.0",
   "author": "IBM",
   "peerDependencies": {
+    "@angular/common": "^17.0.0 || ^18.0.0",
+    "@angular/core": "^17.0.0 || ^18.0.0",
+    "@angular/forms": "^17.0.0 || ^18.0.0",
     "@carbon/styles": "^1.56.0",
-    "rxjs": "^7.0.0"
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "17.3.11",
