--- a/package.json
+++ b/package.json
@@ -89,13 +89,9 @@
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
     "@compodoc/compodoc": "1.1.26",
-    "@storybook/addon-a11y": "8.6.14",
-    "@storybook/addon-actions": "8.6.14",
-    "@storybook/addon-essentials": "8.6.14",
-    "@storybook/addon-links": "8.6.14",
-    "@storybook/addon-storysource": "8.6.14",
-    "@storybook/angular": "8.6.14",
-    "@storybook/theming": "8.6.14",
+    "@storybook/addon-a11y": "9.0.18",
+    "@storybook/addon-links": "9.0.18",
+    "@storybook/angular": "9.0.18",
     "@types/jasmine": "3.8.0",
     "@types/node": "12.20.55",
     "@types/resize-observer-browser": "^0.1.7",
@@ -131,12 +127,14 @@
     "sass": "1.57.0",
     "sass-loader": "13.2.0",
     "semantic-release": "19.0.0",
-    "storybook": "8.6.14",
+    "storybook": "9.0.18",
     "ts-helpers": "1.1.2",
     "typescript": "5.4.5",
     "typescript-eslint": "8.19.0",
     "whatwg-fetch": "3.0.0",
-    "zone.js": "0.14.10"
+    "zone.js": "0.14.10",
+    "eslint-plugin-storybook": "9.0.18",
+    "@storybook/addon-docs": "9.0.18"
   },
   "dependencies": {
     "@carbon/icon-helpers": "10.54.0",
