--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -43,7 +43,7 @@ jobs:
     # We use Node v20 for building since it is current lts. Node v16 is no longer supported in Angular 17.
     strategy:
       matrix:
-        angular-version: [14, 15, 16, 17, 18]
+        angular-version: [14, 15, 16, 17, 18, 19]
         node-version: [20.x]
 
     steps:
